# majo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  main.py
app/agent/: agent.py  llms.py
src/majo/: cli.py  config.py  console.py
src/majo/agent/: agent.py  llms.py  prompts.py
tests/files/: inbox_report_en.md
